# Misigma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.bat  init.ps1
game_shaders/: marsgradeCS.hlsl
shaders/hlsl6/: aerialPerspectiveCS.cso  aerialPerspectiveCS.wishadermeta  blockcompressCS_BC1.cso  blockcompressCS_BC1.wishadermeta  blockcompressCS_BC3.cso  blockcompressCS_BC3.wishadermeta  blockcompressCS_BC4.cso  blockcompressCS_BC4.wishadermeta  blockcompressCS_BC5.cso  blockcompressCS_BC5.wishadermeta  blockcompressCS_BC6H.cso  blockcompressCS_BC6H.wishadermeta  blockcompressCS_BC6H_cubemap.cso  blockcompressCS_BC6H_cubemap.wishadermeta  bloomseparateCS.cso  bloomseparateCS.wishadermeta  blur_bilateral_float1CS.cso  blur_bilateral_float1CS.wishadermeta  blur_bilateral_float4CS.cso  blur_bilateral_float4CS.wishadermeta  blur_bilateral_wide_float1CS.cso  blur_bilateral_wide_float1CS.wishadermeta  blur_bilateral_wide_float4CS.cso  blur_bilateral_wide_float4CS.wishadermeta  blur_gaussian_float1CS.cso  blur_gaussian_float1CS.wishadermeta  blur_gaussian_float4CS.cso  blur_gaussian_float4CS.wishadermeta  blur_gaussian_wide_float1CS.cso  blur_gaussian_wide_float1CS.wishadermeta  blur_gaussian_wide_float4CS.cso  blur_gaussian_wide_float4CS.wishadermeta  bvh_hierarchyCS.cso  bvh_hierarchyCS.wishadermeta  bvh_primitivesCS.cso  bvh_primitivesCS.wishadermeta  bvh_propagateaabbCS.cso  bvh_propagateaabbCS.wishadermeta  captureImpostorPS.cso  captureImpostorPS.wishadermeta  (+599 more)
shaders/hlsl6/ffx-fsr2/: ffx_fsr2_accumulate_pass.cso  ffx_fsr2_accumulate_pass.wishadermeta  ffx_fsr2_autogen_reactive_pass.cso  ffx_fsr2_autogen_reactive_pass.wishadermeta  ffx_fsr2_compute_luminance_pyramid_pass.cso  ffx_fsr2_compute_luminance_pyramid_pass.wishadermeta  ffx_fsr2_depth_clip_pass.cso  ffx_fsr2_depth_clip_pass.wishadermeta  ffx_fsr2_lock_pass.cso  ffx_fsr2_lock_pass.wishadermeta  ffx_fsr2_prepare_input_color_pass.cso  ffx_fsr2_prepare_input_color_pass.wishadermeta  ffx_fsr2_rcas_pass.cso  ffx_fsr2_rcas_pass.wishadermeta  ffx_fsr2_reconstruct_previous_depth_pass.cso  ffx_fsr2_reconstruct_previous_depth_pass.wishadermeta
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/core/: Application.cpp  Application.h  GameState.h
src/net/: NetManager.cpp  NetManager.h  Packets.h
src/states/: GameplayState.cpp  GameplayState.h  LoadingState.cpp  LoadingState.h  LobbyState.cpp  LobbyState.h  MainMenuState.cpp  MainMenuState.h  OptionsState.cpp  OptionsState.h
